# generic_deltamodel

./: .gitignore  .pre-commit-config.yaml  AET_hydro.npy  BFI.npy  LICENSE  PET_hydro.npy  README.md  README_zn.md  env_dPL_Hydro_SNTEMP_linux.yaml  evapfactor.npy  example_dhbv_2_0.ipynb  gwflow.npy  main.py  metrics.json  metrics_agg.json  percolation.npy  pyproject.toml  ssflow.npy  streamflow_no_rout.npy  streamflow_obs.npy  test.ipynb  train_log.txt
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature-request.md  feature-template.md
.github/workflows/: build-wheels.yaml  lint.yaml  pytest.yaml  test-wheels.yaml
MODELS/: Differentiable_models.py  train_test.py
MODELS/NN_models/: LSTM_models.py  MLP_models.py
MODELS/PET_models/: potet.py
MODELS/hydro_models/HBV/: HBVmul.py
MODELS/hydro_models/HBV_capillary/: HBVmultdET.py
MODELS/hydro_models/SACSMA/: SACSMAmul.py
MODELS/hydro_models/SACSMA_with_snowpack/: SACSMA_snow_mul.py
MODELS/hydro_models/marrmot_PRMS/: prms_marrmot.py
MODELS/hydro_models/marrmot_PRMS_refreeze/: prms_marrmot_refreeze.py
MODELS/loss_functions/: NSEsqrtLoss_flow.py  NSEsqrtLoss_flow_temp.py  RmseLoss_BFI_temp.py  RmseLoss_flow_comb.py  RmseLoss_flow_temp.py  RmseLoss_flow_temp_BFI.py  RmseLoss_flow_temp_BFI_PET.py  RmseLoss_temp.py  crit.py  get_loss_function.py
adapter/: hydrofabric_lookup.py
adapter/aorc_forcing/: aorc_data.py  aorc_data_all.py  aorc_data_icds.py
adapter/conus/: attrs_data.py  forcing_data.py  runoff_data.py
adapter/texas/: forcing_data.py  runoff_data.py
conf/: config.py  config.yaml  config_dhbv2_mts_camels.yaml  config_dhbv2_mts_icds.yaml  config_dhbv2_mts_texas.yaml  config_ms.yaml  default.yaml  hbv_rmse.yaml  main_config.json  observations_camels.yaml  observations_icds.yaml  observations_texas.yaml  temporalCamels.yaml  utils.py
conf/hydra/: settings.yaml
conf/observations/: camels_531.yaml  camels_531_prism.yaml  camels_671.yaml  global_6738.yaml  hydrofabric.yaml  merit.yaml  none.yaml  prism_531.yaml  prism_671.yaml  soil_moisture.yaml
conf/tune/: raytune.yaml
config/: config_hydro_temp.yaml  read_configurations.py
core/load_data/: dataFrame_loading.py  data_prep.py  normalizing.py
core/utils/: randomseed_config.py  small_codes.py
dMG/: __main__.py
dMG/conf/: config.py  config.yaml
dMG/conf/hydra/: settings.yaml
dMG/core/calc/: metrics.py  (+4 more)
dMG/models/: differentiable_model.py  model_handler.py
dMG/trainers/: __init__.py  base.py  test.py  train.py  trainer.py
dMGen/conf/: config.yaml
dMGen/experiment/: test.py  test_conus.py  train_wnn.py
dPLHydro_multimodel/: __main__.py
dPLHydro_multimodel/conf/: config.py  config.yaml
dPLHydro_multimodel/docs/: How_to_Run_dPL_BMI_in_NextGen.txt  attributions.md  config_files.md
dPLHydro_multimodel/experiment/: __init__.py  experiment_tracker.py  train.py  train_conus.py
dPLHydro_multimodel/models/: model_handler.py
deltaMod/: __main__.py
deltaMod/conf/: config.yaml
deltaMod/models/: differentiable_model.py
deltaMod/trainers/: __init__.py  test.py  train.py
deltaModel/: __main__.py  main_dev.py  main_hydro.py  main_multiscale.py  toy_model.ipynb  train_ddp.py
deltaModel/conf/: config.py  config.yaml  config_adj.yaml  config_dev.yaml  config_mmm.yaml  config_ms.yaml  config_multiscale.yaml
deltaModel/models/: diff_model_backup.py  diff_model_dev.py  differentiable_model.py  differentiable_model_depr.py  model_handler.py  model_handler_dev.py
deltaModel/trainers/: __init__.py  base.py  test.py  test_depr.py  train.py  trainer.py  trainer_2_0.py  trainer_dev.py  trainer_hydrodl.py  trainer_merged.py  trainer_ms.py
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  api_reference.md  attributions.md  bmi_nextgen_how_to_ use.txt  config_files_guide.md  configuration.md  configuration_files.md  configuration_glossary.md  getting started.md  getting started_guide.md  how_to_run.md  setup.md  style_guide.md
envs/: deltamod_env.yaml  deltamodel_env.yaml  dmg_env.yaml  gDM_env_windows.yml  hydrodl2_env.yaml  hydrodl_env.yaml  hydrodlv2.yaml  hydrodlv2_lite.yaml  mulhydrodl_env_linux.yaml  requirements.txt  requirements_py312.txt
example/: MERIT_data.ipynb  __init__.py  _get_data_at_catchment.py  config.json  mts_forward.py
example/conf/: config_dhbv.yaml  config_dhbv1_1p.yaml  config_dhbv_1_0.yaml  config_dhbv_1_1p.yaml  config_dhbv_2.yaml  config_dhbv_2_0.yaml  config_lstm.yaml  dhbv_11p_config.yaml  dhbv_config.yaml  dhbv_spatial_config.yaml  dhbv_v1_1p_config.yaml  dhbv_v1_1p_spatial_config.yaml  lstm_config.yaml
example/dPLHBV/: dHBV_capillary_tutorial.ipynb  dPLHBV_tutorial.ipynb
example/differentiable_hydrology/: README.md  dhbv_spatial_testing.ipynb  dhbv_tutorial.ipynb  setup_guide.md  test.py  tutorial_dhbv.ipynb  tutorial_dhbv_spatial.ipynb
example/hydrology/: HBV1_1p.py  README.md  README_zn.md  _dhbv2_mts_forward.py  _example_dhbv2_mts.py  _gefs_utils.py  _get_data_at_catchment.py  camels_671_loc.dbf  dhbv_1_1p_zn_simu.ipynb  dhbv_1_1p_zn_test.ipynb  dhbv_1_1p_zn_train.ipynb  example_dhbv.ipynb  example_dhbv_1_0.ipynb  example_dhbv_1_1p.ipynb  example_dhbv_1_1p_cold_warm.ipynb  example_dhbv_1_1p_gefs.ipynb  example_dhbv_2.ipynb  example_dhbv_2_0.ipynb  example_lstm.ipynb  helper.py  run_summary.txt  tempfunctions.py  tutorial_dhbv.ipynb  tutorial_dhbv_1_1p.ipynb  tutorial_dhbv_2_0.ipynb  utils.py
example/lstm/: LSTM_tutorial.ipynb  README.md
model/: normalization_statistics.json
nonlinearSolver/: NewRaphson.py
post/: analysis_prism_camels.ipynb  plot.py  stat.py
src/dMG/: __init__.py  __main__.py  _version.py
src/dmg/: SoilMoistureMain.py  __init__.py  __main__.py  finetune_main.py  finetune_mainNoHBV.py
tests/: __init__.py  conftest.py  test_convergence.py  test_core.py  test_criterion.py  test_differentiable_models.py  test_forward_pass.py  test_gradients.py  test_loaders.py  test_main.py  test_model_handler.py  test_models.py  test_mts_models.py  test_parameter_learning.py  test_parameters.py  test_regression.py  test_samplers.py  test_train_regression.py  test_trainers.py
(+393 files in other folders)
